[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mfc"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    # General
    "rich",
    "wheel",
    "PyYAML",
    "argparse",
    "dataclasses",
    "fastjsonschema",
    "rapidfuzz",  # For "did you mean?" typo suggestions

    # Build System
    "fypp",

    # Running Cases
    "mako",

    # Code Health
    "typos",
    "pylint",
    "fprettify",
    "autopep8",   # Python formatter (black has issues with Python 3.12.5)
    "ansi2txt",

    # Profiling
    "numpy",
    "pandas",

    # Chemistry
    "cantera>=3.1.0",
    #"pyrometheus == 1.0.5",
    "pyrometheus @ git+https://github.com/pyrometheus/pyrometheus.git",

    # Frontier Profiling
    "astunparse==1.6.2",
    "pymongo",
    "tabulate"
]

[project.optional-dependencies]
viz = [
    # 2D/3D plotting (renderer, TUI)
    "matplotlib",

    # Silo-HDF5 reader
    "h5py",

    # MP4 export
    "imageio>=2.33",
    "imageio-ffmpeg>=0.5.0",

    # Terminal UI (--tui)
    "plotext>=5.2.0",
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",

    # Interactive web UI (--interactive)
    "dash>=2.0",
    "plotly",

    # Progress bar (PNG/MP4 batch rendering)
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
relative_to = "pyproject.toml"
version_file = "mfc/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "mfc/_version.py"
