[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mfc"
dynamic = ["version"]
dependencies = [
    # General
    "rich",
    "wheel",
    "PyYAML",
    "argparse",
    "dataclasses",
    "fastjsonschema",
    "rapidfuzz",  # For "did you mean?" typo suggestions

    # Build System
    "fypp",

    # Running Cases
    "mako",

    # Code Health
    "typos",
    "ruff",
    "ffmt==0.4.0",
    "ansi2txt",

    # Profiling
    "numpy",
    "pandas",

    # Chemistry
    "cantera>=3.1.0",
    #"pyrometheus == 1.0.5",
    "pyrometheus @ git+https://github.com/pyrometheus/pyrometheus.git",

    # Frontier Profiling
    "astunparse==1.6.2",
    "pymongo",
    "tabulate",

    # Visualization (./mfc.sh viz)
    "matplotlib",
    "h5py",
    "imageio>=2.33",
    "imageio-ffmpeg>=0.5.0",
    "plotext>=5.2.0",
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "dash>=2.0",
    "plotly",
    "kaleido",
    "PyTurboJPEG<2.0",  # 2.x requires libjpeg-turbo>=3; most systems ship 2.x
    "scikit-image",
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = ".."
relative_to = "pyproject.toml"
version_file = "mfc/_version.py"

[tool.hatch.build.hooks.vcs]
version-file = "mfc/_version.py"
